Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-9084] ReactiveCocoa, debug build, compiler assert, deserialization: cross-reference to generic param for non-generic type #51585

Closed
atrick opened this issue Oct 25, 2018 · 5 comments
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself

Comments

@atrick
Copy link
Member

atrick commented Oct 25, 2018

Previous ID SR-9084
Radar rdar://problem/45566043
Original Reporter @atrick
Type Bug
Status Resolved
Resolution Done
Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug
Assignee @belkadan
Priority Medium

md5: e00344efabf69314e950e81bd90faa32

Issue Description:

Reproduce with:

./runner.py --projects projects.json --include-actions 'action.startswith("Build")' --swiftc /s/stash/build/Ninja-ReleaseAssert/swift-macosx-x86_64/bin/swiftc --build-config debug --include-repos ' ``path == "ReactiveCocoa"'

DESERIALIZATION FAILURE

Cross-reference to module 'ReactiveSwift'Cross-reference to module 'ReactiveSwift'

  1. While deserializing SIL vtable for 'SignalProducerCore' in module 'ReactiveSwift'

  2. While deserializing 'flatMapEvent' (FuncDecl #​4) in 'ReactiveSwift'

  3. While deserializing 'transform' (ParamDecl #​66) in 'ReactiveSwift'
    {{}}

Stack:

6 swift 0x000000010df25153 swift::ModuleFile::fatal(llvm::Error) + 6757 swift 0x000000010df254ef swift::ModuleFile::getDecl(llvm::PointerEmbeddedInt<unsigned int, 31>) + 1118 swift 0x000000010df2dff9 swift::ModuleFile::getTypeChecked(llvm::PointerEmbeddedInt<unsigned int, 31>) + 7513

@atrick
Copy link
Member Author

atrick commented Oct 25, 2018

@swift-ci create

@belkadan
Copy link
Contributor

Oops. Got a fix.

@atrick
Copy link
Member Author

atrick commented Oct 26, 2018

Thanks!

@belkadan
Copy link
Contributor

#20091

@swift-ci
Copy link
Collaborator

swift-ci commented Feb 6, 2019

Comment by Andrei Ermoshin (JIRA)

Just found similar crash while compiling iOS project in Xcode 10.1 with ReactiveSwift from CocoaPods.

pod 'ReactiveSwift', '~> 3.0'

Workaround: Xcode -> Product -> Clean build folder. After that I can build project without error.

<unknown>:0: error: fatal error encountered while reading from module 'ReactiveSwift'; please file a bug report with your project and the crash log

      • DESERIALIZATION FAILURE (please include this section in any bug report) ***

result not found

Cross-reference to module 'ReactiveSwift'

... Signal

... in an extension in module 'ReactiveSwift'

... Error

0 swift 0x000000010831859a PrintStackTraceSignalHandler(void*) + 42

1 swift 0x0000000108317d4e SignalHandler(int) + 302

2 libsystem_platform.dylib 0x00007fff760fcb3d _sigtramp + 29

3 swift 0x0000000108dc4008 (anonymous namespace)::DarwinX86AsmBackend::getCompactUnwindRegNum(unsigned int) const::CU32BitRegs + 101474

4 libsystem_c.dylib 0x00007fff75fba1c9 abort + 127

5 swift 0x000000010577dfeb swift::ModuleFile::fatal(llvm::Error) + 1915

6 swift 0x0000000105789390 swift::ModuleFile::getDeclCheckedImpl(llvm::PointerEmbeddedInt<unsigned int, 31>, llvm::Optional<swift::DeclContext*>) + 44496

7 swift 0x000000010577e47f swift::ModuleFile::getDeclChecked(llvm::PointerEmbeddedInt<unsigned int, 31>, llvm::Optional<swift::DeclContext*>) + 79

8 swift 0x000000010578e4b1 swift::ModuleFile::getDeclContext(llvm::PointerEmbeddedInt<unsigned int, 31>) + 289

9 swift 0x000000010578217e swift::ModuleFile::getDeclCheckedImpl(llvm::PointerEmbeddedInt<unsigned int, 31>, llvm::Optional<swift::DeclContext*>) + 15294

10 swift 0x000000010577e47f swift::ModuleFile::getDeclChecked(llvm::PointerEmbeddedInt<unsigned int, 31>, llvm::Optional<swift::DeclContext*>) + 79

11 swift 0x000000010578be23 swift::ModuleFile::getTypeChecked(llvm::PointerEmbeddedInt<unsigned int, 31>) + 6195

12 swift 0x0000000105794ea7 swift::ModuleFile::getGenericSignature(llvm::PointerEmbeddedInt<unsigned int, 31>) + 759

13 swift 0x000000010578efd6 swift::ModuleFile::getGenericSignatureOrEnvironment(llvm::PointerEmbeddedInt<unsigned int, 31>, bool) + 262

14 swift 0x00000001057a1578 swift::SILDeserializer::readSILFunctionChecked(llvm::PointerEmbeddedInt<unsigned int, 31>, swift::SILFunction*, llvm::StringRef, bool, bool) + 3528

15 swift 0x00000001057b75b7 swift::SILDeserializer::getAllSILFunctions() + 967

16 swift 0x000000010585e6ca swift::SerializedSILLoader::getAllForModule(swift::Identifier, swift::FileUnit*) + 170

17 swift 0x00000001045a692e performCompile(swift::CompilerInstance&, swift::CompilerInvocation&, llvm::ArrayRef<char const*>, int&, swift::FrontendObserver*, swift::UnifiedStatsReporter*) + 34558

18 swift 0x000000010459ad35 swift::performFrontend(llvm::ArrayRef<char const*>, char const*, void*, swift::FrontendObserver*) + 7717

19 swift 0x0000000104540965 main + 1349

20 libdyld.dylib 0x00007fff75f11ed9 start + 1

21 libdyld.dylib 0x0000000000000062 start + 2316231050

part of Stack dump:

iphonesimulator/ReactiveSwift.build/Objects-normal/x86_64/ReactiveSwift.swiftmodule

1. While deserializing SIL function "$S13ReactiveSwift6SignalCAAs5NeverORszrlE12promoteValueyACyqd_q_GqdmlFfA"

2. While deserializing 'U' (GenericTypeParamDecl #811) in 'ReactiveSwift'

3. While deserializing 'promoteValue' (FuncDecl #238) in 'ReactiveSwift'

error: Abort trap: 6

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself
Projects
None yet
Development

No branches or pull requests

3 participants