[Serialization] Encode depth for cross-refs to generic parameters

Otherwise, we can't represent a cross-reference to generic parameters
in a parent type /when used in an extension/.

https://bugs.swift.org/browse/SR-9084